# robot_lidar

./: frames_2025-11-25_20.14.28.gv  frames_2025-11-25_20.37.56.gv  frames_2025-11-25_22.08.47.gv  frames_2025-11-25_22.12.08.gv  frames_2025-11-25_22.16.20.gv  frames_2025-12-26_15.53.06.gv  readme.md
html/: operator.html
install/: local_setup.sh  setup.sh
install/ldlidar/lib/ldlidar/: ldlidar
install/ldlidar/share/ldlidar/: local_setup.sh  package.sh
install/ldlidar/share/ldlidar/cmake/: ldlidarConfig.cmake
install/ldlidar/share/ldlidar/launch/: ld14p.launch.py
install/lidar/lib/lidar/: odom  rotate_wheel  vel_to_joint
install/lidar/share/lidar/: package.sh  package.xml
install/lidar/share/lidar/config/: bridge.yaml  default.rviz  slam.rviz
install/lidar/share/lidar/launch/: display_rviz2.launch.py  slam.launch.py  start_gazebo.launch.py
install/lidar/share/lidar/urdf/: robot.urdf  robot.urdf.xacro
install/lidar/share/lidar/world/: demo.sdf  room.sdf
log/: latest_build
maps/: my_room.pgm  my_room.yaml
src/ldlidar/: CMakeLists.txt
src/ldlidar/launch/: ld14p.launch.py
src/lidar/: setup.py
src/lidar/config/: bridge.yaml  mapper_params_online_async.yaml  my_nav2_params.yaml  slam.rviz  slam.yaml
src/lidar/launch/: nav.launch.py  serial.launch.py  slam.launch.py  slam2.launch.py  start.launch.py  start_gazebo.launch.py
src/lidar/lidar/: cmd_vel_to_joint_state.py  odometry_pub.py  operator.py  serial_read.py
src/lidar/msg/: WheelData.msg
src/lidar/urdf/: demo.urdf.xacro  robot.urdf.xacro
src/uart_msg/: CMakeLists.txt  package.xml
